syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "github.com/vllvll/devops/proto";

message Metric {
  string id = 1;
  enum Type {
    UNKNOWN = 0;
    GAUGE = 1;
    COUNTER = 2;
  }
  Type type = 2;
  optional int64 delta = 3;
  optional double value = 4;
  optional string hash = 5;
}

message BulkMetrics {
  repeated Metric metrics = 1;
}

message AddBulkMetricsRequest {
  BulkMetrics metrics = 1;
}

service Metrics {
  rpc BulkSaveMetrics(AddBulkMetricsRequest) returns (google.protobuf.Empty);
}
